--- a/.env.production
+++ b/.env.production
@@ -1,11 +1,12 @@
 # 页面标题
-VITE_APP_TITLE = 若依管理系统
+VITE_APP_TITLE = xiaowei工具系统
 
 # 生产环境配置
 VITE_APP_ENV = 'production'
 
 # 若依管理系统/生产环境
-VITE_APP_BASE_API = '/prod-api'
+# VITE_APP_BASE_API = '/prod-api'
+VITE_APP_BASE_API = 'http://47.115.138.236:8080'
 
 # 是否在打包时开启压缩，支持 gzip 和 brotli
 VITE_BUILD_COMPRESS = gzip
