--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ruoyi",
   "version": "3.8.8",
-  "description": "小危工具系统",
+  "description": "xiaowei工具系统",
   "author": "若依",
   "license": "MIT",
   "type": "module",
